# siteiq

./: .gitignore  CHANGELOG.md  README.md  VISION.md  claude.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  config.py  logging_config.py  main.py  pyproject.toml  seed_demo_record.py  seed_demo_user.py  settings.py
backend/alembic/: env.py
backend/analytics/: aggregator.py  travel.py  utilization.py  vertical_metrics.py
backend/api/: camera.py  deps.py  dev.py  devices.py  health.py  ingest.py  project_assets.py  projects.py  record.py  record_export.py  request_id.py  routes.py  security_headers.py  websocket.py  worker.py  ws_auth.py
backend/auth/: __init__.py  auth_cleanup.py  csrf.py  email_sender.py  email_templates.py  errors.py  outbox_cleanup.py  passwords.py  rate_limit.py  routes.py  service.py  sessions.py  timeutil.py  tokens.py
backend/db/: __init__.py  base.py  engine.py  models.py  project_repository.py  session.py
backend/models/: __init__.py  analytics.py  assets.py  connection.py  cost.py  project_document.py  site.py  site_event.py
backend/optimization/: equipment_schedule.py  facility_placement.py  material_staging.py  vertical_transport_optimizer.py
backend/orgs/: __init__.py  routes.py  service.py
backend/seeds/: __init__.py  importer.py  loader.py
backend/services/: capture.py  cost_engine.py  demo_record_generator.py  device_cleanup.py  device_service.py  event_ledger.py  ingest_writer.py  portfolio_estimator.py  recommendation_service.py  record_access.py  record_projections.py  record_query.py  sim_calendar.py
backend/simulation/: asset_detail.py  density.py  engine.py  equipment_behavior.py  event_emit.py  navmesh.py  project_loader.py  site_factory.py  tiefbau_behavior.py  vertical_transport.py  worker_behavior.py  worker_internals.py
backend/state/: live_source.py  registry.py  source.py
backend/tests/: conftest.py  test_active_project_persistence.py  test_api.py  test_apply_recs.py  test_asset_detail.py  test_audit_export.py  test_auth_cleanup.py  test_auth_passwords.py  test_auth_routes.py  test_authz.py  test_bug_fixes.py  test_cost_engine.py  test_db.py  test_deletion.py  test_demo_record_generator.py  test_device_ingest.py  test_di.py  test_edge_cases.py  test_email_sender.py  test_engine_perf.py  test_event_ledger.py  test_event_loop.py  test_health.py  test_heatmap.py  test_live_source.py  test_logging.py  test_magic_link.py  test_multilevel_core.py  test_navmesh.py  test_navmesh_integration.py  test_orgs.py  test_outbox_cleanup.py  test_per_org_engine.py  test_project_assets.py  test_project_document.py  test_project_persistence.py  test_project_preview.py  test_rate_limit.py  test_record_access.py  test_record_api.py  (+13 more)
backend/vision/: detector.py
edge/: README.md  (+1 more)
(+172 files in other folders)
