[project]
name = "siteiq-backend"
version = "0.1.0"
description = "SiteIQ construction site intelligence backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "ultralytics>=8.4.71",
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = []
