[project]
name = "siteiq-backend"
version = "0.1.0"
description = "SiteIQ construction site intelligence backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "ultralytics>=8.4.71",
    "opencv-python-headless>=4.13.0.92",
    "pydantic-settings>=2.14.2",
    "python-json-logger>=4.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=1.4.0",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
# Strict-scoped to the modules that have been refactored to typed state in
# step 3. Broaden over time. `follow_imports = silent` keeps cascading into
# not-yet-refactored modules (models/, optimization/) from blocking us.
files = [
    "simulation/worker_internals.py",
    "simulation/worker_behavior.py",
    "state/source.py",
]
strict = true
ignore_missing_imports = true
follow_imports = "silent"
